# k3s-1.rymcg.tech

./: index.html  k3s-1.rymcg.tech.org
flux-system/: kustomization.yaml  kustomize.sources.yaml
kube-system/traefik/: whoami.yaml
pyapp/: deployment.yaml  namespace.yaml
pyapp/pyapp/: Dockerfile  main.py  model.py  pyproject.toml
