[tool.poetry]
name = "pyapp"
version = "0.0.1"
description = "FastAPI server"
authors = ["Some Developer <you@example.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.3"}
sqlalchemy = ">=1.4.0b1"
psycopg2 = ">=2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
